API and IDE optimizations