@@ -1,6 +1,6 @@
 /*
- * Copyright (c) 2012-2023 - @FabioZumbi12
- * Last Modified: 10/05/2023 14:49
+ * Copyright (c) 2012-2024 - @FabioZumbi12
+ * Last Modified: 26/11/2024 17:51
  *
  * This class is provided 'as-is', without any express or implied warranty. In no event will the authors be held liable for any
  *  damages arising from the use of this class.
@@ -233,7 +233,7 @@ public final class RedBackups extends JavaPlugin implements Listener, CommandExe
             } else {
                 Set<Region> regionSet = RedProtect.get().getAPI().getAllRegions();
 
-                for (Region region : regionSet.stream().filter(r -> worlds.contains(r.getWorld())).collect(Collectors.toList())) {
+                for (Region region : regionSet.stream().filter(r -> worlds.contains(r.getWorld())).toList()) {
                     try {
                         String worldName = region.getWorld();
                         File tempWorld = new File(getServer().getWorldContainer().getCanonicalPath(), worldName);
@@ -262,7 +262,7 @@ public final class RedBackups extends JavaPlugin implements Listener, CommandExe
                 }
             }
 
-            if (backupList.size() > 0) {
+            if (!backupList.isEmpty()) {
                 Bukkit.getLogger().info("Starting copy of " + backupList.size() + " world chunk files to backups...");
 
                 // Start backup files
